- Bug fix for when new entries are saved - Tab indices - Proper z-indexing and delete button visibility on focus

--- a/style.css
+++ b/style.css
@@ -61,8 +61,17 @@ span.delete-entry {
   right: 5px;
   display: none;
 }
+div.entry:hover {
+  z-index: 3;
+}
 div.entry:hover span.delete-entry {
   display: initial;
+}
+div.focused-entry {
+  z-index: 3 !important;
+}
+span.focused-delete-entry {
+  display: initial !important;
 }
 span.delete-entry > a {
   color: gray;
